--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -10,6 +10,8 @@ services:
       - N8N_HOST=localhost
       - N8N_PORT=8989
       - N8N_PROTOCOL=http
+      - N8N_DIAGNOSTICS_ENABLED=false
+      - N8N_VERSION_NOTIFICATIONS_ENABLED=false
       - N8N_PATH=__BASE_PATH__
       - N8N_EDITOR_BASE_URL=https://activate.parallel.works__BASE_PATH__
       - WEBHOOK_URL=https://activate.parallel.works__BASE_PATH__
