--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -6,6 +6,7 @@ services:
     ports:
       - "8989:8989"
     environment:
+      - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=false
       - GENERIC_TIMEZONE=UTC
       - N8N_HOST=localhost
       - N8N_PORT=8989
